--- a/src/assets/styles/views/home-page.scss
+++ b/src/assets/styles/views/home-page.scss
@@ -1,13 +1,20 @@
-table{
+table {
     text-transform: uppercase;
 
     width: 800px;
-    th{
+    th {
         height: 40px;
         background: gray;
     }
-    td{
+    td {
         padding: 10px;
         background-color: #efeeee;
+    }
+    tr {
+        img {
+            object-fit: cover;
+            height: 100px;
+            width: 100px;
+        }
     }
 }
