--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -11,17 +11,11 @@
 @import "basics/links";
 @import "basics/forms";
 
-
 // Views
 @import "views/home-page.scss";
+@import "views/search-companie";
 
 // Components
 
 @import "cmps/companie-preview-results";
 @import "cmps/companies-list-results";
-
-
-
-
-
-
