--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -4,7 +4,7 @@
 
 
 html {
-    font-family: montserrat;
+    font-family: "Quicksand-Light";
     line-height: 1.6;
 }
 
@@ -16,7 +16,6 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: caveat;
     margin: 0 0 0.6em;
     line-height: 1;
 }
