--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -1,8 +1,9 @@
 @font-face {
-    // font-family: caveat;
-    // src: url(../../fonts/Caveat/Caveat-Regular.ttf);
-}
-@font-face {
-    // font-family: montserrat;
-    // src: url(../../fonts/Montserrat/Montserrat-Regular.ttf);
-}
+    font-family: 'Quicksand-Light';
+    src        : url(../fonts/Quicksand-Light.ttf);
+  }
+  
+  @font-face {
+    font-family: 'Quicksand-Bold';
+    src        : url(../fonts/Quicksand-Bold.ttf);
+  }
