--- a/src/assets/styles/views/_search-companie.scss
+++ b/src/assets/styles/views/_search-companie.scss
@@ -10,7 +10,7 @@
         border-radius: 4px;
         border: none;
         font-weight: 700;
-        /* color: #d50000; */
+        color: #e4e0e0;
         background-color: #41414154;
         margin-bottom: 38px;
         box-shadow: 0 0 5px 1px #ffffff17;
