--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -12,22 +12,27 @@
     }
 
     @include for-narrow-layout {
-        grid-template-columns: 
+        grid-template-columns:
             minmax(20px, 1fr)
             minmax(auto, $mobile-breakpoint)
             minmax(20px, 1fr);
     }
     @include for-normal-layout {
-        grid-template-columns: 
+        grid-template-columns:
             minmax(20px, 1fr)
             minmax(auto, $narrow-breakpoint)
             minmax(20px, 1fr);
     }
     @include for-wide-layout {
-        grid-template-columns: 
+        grid-template-columns:
             minmax(20px, 1fr)
             minmax(auto, $normal-breakpoint)
             minmax(20px, 1fr);
     }
+    @include for-mobile-layout {
+        grid-template-columns:
+            minmax(20px, 1fr)
+            minmax(auto, $mobile-breakpoint )
+            minmax(20px, 1fr);
+    }
 }
-
